[package]
name = "bulletproof"
version = "1.1.6"
authors = [
    "Omer Shlomovits <omer@kzencorp.com>",
    "Suyash Bagad <suyashnbagad1997@gmail.com>"
]

[lib]
crate-type = ["lib"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
itertools = { git = "https://github.com/mesalock-linux/rust-itertools-sgx" }
serde = { version = "1.0", features =["derive"], git = "https://github.com/mesalock-linux/serde-sgx.git" }
serde_derive = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx.git" }
#curv = { package = "curv-kzen", version = "0.7", default-features = false }
curv = {git = "https://github.com/Polkadex-Substrate/curv.git", branch = "sgx-enabled"}

#[dev-dependencies]
#criterion = "0.2"

[features]
default = ["curv/rust-gmp-kzen"]

#[[bench]]
#name = "range_proof"
#path = "benches/range_proof.rs"
#harness = false
